# src/webapp/src/api/listen-and-write/openapi.json
@@ -680,6 +680,10 @@
       "TextComparison": {
         "type": "object",
         "properties": {
+          "comparisonIndex": {
+            "type": "integer",
+            "format": "int32"
+          },
           "sourceComparisonIndex": {
             "type": "integer",
             "format": "int32"
@@ -698,6 +702,17 @@
             "$ref": "#/components/schemas/TextRange"
           },
           "userText": {
+            "type": "string",
+            "nullable": true
+          },
+          "mistakePatternTags": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "nullable": true
+          },
+          "mistakePatternPhrase": {
             "type": "string",
             "nullable": true
           }
